[gd_scene load_steps=18 format=2]

[ext_resource path="res://HologramPlayer/InputReplayer.gd" type="Script" id=1]
[ext_resource path="res://HologramPlayer/Holo_Head.png" type="Texture" id=2]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://HologramPlayer/Holo_Torso.png" type="Texture" id=4]
[ext_resource path="res://HologramPlayer/Holo_Feet.png" type="Texture" id=5]
[ext_resource path="res://HologramPlayer/HologramPlayer.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="CircleShape2D" id=2]
radius = 6.0

[sub_resource type="Animation" id=3]
resource_name = "IdleFeet"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FeetSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "WalkingFeet"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FeetSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "HoldingGunFiring"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("TorsoSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 8 ]
}

[sub_resource type="Animation" id=6]
resource_name = "HoldingGunIdle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TorsoSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=7]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TorsoSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TorsoSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "FiringHead"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("HeadSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HeadSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=11]
radius = 13.0

[node name="Hologram" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 17
script = ExtResource( 6 )

[node name="Replayer" type="Node" parent="."]
script = ExtResource( 1 )

[node name="FeetSprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 5 )
offset = Vector2( 0, -5 )
hframes = 10

[node name="TorsoSprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 4 )
offset = Vector2( 0, -5 )
hframes = 10
frame = 9

[node name="HeadSprite" type="Sprite" parent="."]
position = Vector2( -1, 0 )
rotation = 1.5708
texture = ExtResource( 2 )
offset = Vector2( 0, -5 )

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="Collider" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="CameraFollow" type="RemoteTransform2D" parent="."]

[node name="FeetAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "IdleFeet"
anims/IdleFeet = SubResource( 3 )
anims/WalkingFeet = SubResource( 4 )

[node name="TorsoAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "IdleTorso"
anims/HoldingGunFiring = SubResource( 5 )
anims/HoldingGunIdle = SubResource( 6 )
anims/IdleTorso = SubResource( 7 )
anims/WalkingTorso = SubResource( 8 )

[node name="HeadAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/FiringHead = SubResource( 9 )
anims/Idle = SubResource( 10 )

[node name="GunPickupRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="Collider" type="CollisionShape2D" parent="GunPickupRange"]
visible = false
shape = SubResource( 11 )
[connection signal="area_entered" from="GunPickupRange" to="." method="_on_GunPickupRange_area_entered"]
[connection signal="area_exited" from="GunPickupRange" to="." method="_on_GunPickupRange_area_exited"]

[editable path="Hurtbox"]
